# smarthome_media_model

./: .project  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
src/main/java/com/alfred/ros/media/model/: Album.java  Audio.java  Media.java  Movie.java  Song.java  Tvshow.java  Video.java
src/main/java/org/rosmultimedia/player/media/model/: Album.java  Audio.java  Media.java  Movie.java  Song.java  Tvshow.java  Video.java
