<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">
  <name>smarthome_media_model</name>
  <version>0.2.0</version>
  <description>This package is Media model for RosJava.</description>

  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickael Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>GPLv3</license>
  <url type="website">https://support.tactfactory.com/projects/medialfred/wiki/Wiki</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>
  <buildtool_depend>ament_build_type_gradle</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>rosidl_generator_java</buildtool_depend>

  <build_depend>rcljava</build_depend>

  <!--run_depend>libgoogle-gson-java</run_depend-->

  <export>
    <architecture_independent/>
    <build_type>ament_gradle</build_type>
  </export>
</package>
